--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				<div class="col-md-12 text-center st-header-content">
 					<div class="logo"><a href=""><img src="images/logo.png" alt=""></a></div>
 					<div class="st-header-title">
-						<h2>Welcome <span>Deepak Website</span></h2>
-						<p>Welcome to Deepak Heaven <br /> - By Wilshan </p>
+						<h2>Beautiful & Happy 27th Anniversary <span>Kalpana Pariyar & Karan Pariyar Website</span></h2>
+						<p>“Wishing a perfect pair a perfectly happy day.” <br /> - Deepak </p>
 					</div>
 				</div>
 			</div>
