--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="col-md-12 text-center st-header-content">
 					<div class="logo"><a href=""><img src="images/logo.png" alt=""></a></div>
 					<div class="st-header-title">
-						<h2>Beautiful 27th Years Marriage Anniversary <span>Kalpana Pariyar & Karan Pariyar</span></h2>
+						<h2>Wishing 27th Years Marriage Anniversary to <span>Kalpana Pariyar & Karan Pariyar</span></h2>
 						<p>“Wishing a perfect pair a perfectly happy day.” <br /> - Deepak </p>
 					</div>
 				</div>
