--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<div class="row">
 				<div class="col-md-12 text-center st-header-content">
 					<div class="st-header-title">
-						<h2>Wishing 27 Years of Marriage Anniversary to <span>Kalpana Pariyar & Karan Pariyar</span></h2>
-						<p>“Wishing a perfect pair a perfectly happy day | Anniversary cheers!” <br /> - Deepak </p>
+						<h2>Wishing 27th Years of Marriage Anniversary <span>Kalpana Pariyar & Karan Pariyar</span></h2>
+						<p>“Wishing a perfect pair a perfectly happy day ~ Anniversary cheers!” <br /> - Deepak </p>
 					</div>
 				</div>
 			</div>
