--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<div class="row">
 				<div class="col-md-12 text-center st-header-content">
 					<div class="st-header-title">
-						<h2>Wishing 27th Years Marriage Anniversary <span>Kalpana Pariyar & Karan Pariyar</span></h2>
-						<p>“Wishing a perfect pair a perfectly happy day ~ Anniversary cheers!” <br /> - Deepak </p>
+						<h2>Happy Valentine's Day <span>Pooja & Daksh </span></h2>
+						<p>“I will love you my whole life. You and no other ~ Valentine's cheers!” <br /> - Cheeku loves Dakshu (DP) </p>
 					</div>
 				</div>
 			</div>
