--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="col-md-12 text-center st-header-content">
 					<div class="st-header-title">
 						<h2>Happy Valentine's Day <span>Pooja & Daksh </span></h2>
-						<p>“I will love you my whole life. You and no other ~ Valentine's cheers!” <br /> - Cheeku loves Dakshu (DP) </p>
+						<p>“I will love you my whole life. You and no other | Valentine's cheers!” <br /> - Dakshu Loves Cheeku || DP || </p>
 					</div>
 				</div>
 			</div>
